hphp/test/slow/hni/nullable-coerce.php.expectf
int(0)
int(0)
int(-1)
int(-1)

Catchable fatal error: Argument 1 to error_reporting() must be of type ?int, string given in %s/test/slow/hni/nullable-coerce.php on line 12
